--- a/semantic/pages/cms.html
+++ b/semantic/pages/cms.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
   <!-- Site Properities -->
-  <title>Homepage - Semantic</title>
+  <title>Manticore CMS</title>
   <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
   <script src="../dist/semantic.min.js"></script>
   <script src="home/page.js"></script>
@@ -21,9 +21,10 @@
 <div class="ui large top fixed hidden menu">
   <div class="ui container">
     <a class="active item">Home</a>
-    <a class="item">Work</a>
-    <a class="item">Company</a>
-    <a class="item">Careers</a>
+    <a class="item" href="/pages">Pages</a>
+    <a class="item" href="/blocks">Blocks</a>
+    <a class="item" href="/images">Images</a>
+    <a class="item" href="/layouts">Layouts</a>
     <div class="right menu">
       <div class="item">
         <a class="ui button">Log in</a>
@@ -38,13 +39,13 @@
 <!-- Sidebar Menu -->
 <div class="ui vertical inverted sidebar menu">
   <a class="active item">Home</a>
-  <a class="item">Work</a>
-  <a class="item">Company</a>
-  <a class="item">Careers</a>
+  <a class="item" href="/pages">Pages</a>
+  <a class="item" href="/blocks">Blocks</a>
+  <a class="item" href="/images">Images</a>
+  <a class="item" href="/layouts">Layouts</a>
   <a class="item">Login</a>
   <a class="item">Signup</a>
 </div>
-
 
 <!-- Page Contents -->
 <div class="pusher">
@@ -56,9 +57,10 @@
           <i class="sidebar icon"></i>
         </a>
         <a class="active item">Home</a>
-        <a class="item">Work</a>
-        <a class="item">Company</a>
-        <a class="item">Careers</a>
+        <a class="item" href="/pages">Pages</a>
+        <a class="item" href="/blocks">Blocks</a>
+        <a class="item" href="/images">Images</a>
+        <a class="item" href="/layouts">Layouts</a>
         <div class="right item">
           <a class="ui inverted button">Log in</a>
           <a class="ui inverted button">Sign Up</a>
@@ -68,9 +70,9 @@
 
     <div class="ui text container">
       <h1 class="ui inverted header">
-        Imagine-a-Company
+        Manticore.io
       </h1>
-      <h2>Do whatever you want when you want to.</h2>
+      <h2>A CMS to feed your Application</h2>
       <div class="ui huge primary button">Get Started <i class="right arrow icon"></i></div>
     </div>
 
@@ -80,13 +82,13 @@
     <div class="ui middle aligned stackable grid container">
       <div class="row">
         <div class="eight wide column">
-          <h3 class="ui header">We Help Companies and Companions</h3>
-          <p>We can give your company superpowers to do things that they never thought possible. Let us delight your customers and empower your needs...through pure data analytics.</p>
-          <h3 class="ui header">We Make Bananas That Can Dance</h3>
-          <p>Yes that's right, you thought it was the stuff of dreams, but even bananas can be bioengineered.</p>
+          <h3 class="ui header">Manage your Content</h3>
+          <p>Manticore CMS allows you to manage your content anytime, anywhere, including Offline mode</p>
+          <h3 class="ui header">Consume your content</h3>
+          <p>Manticore CMS exposes your content both via a: REST API, Graph API and for Real Time socket subscription</p>
         </div>
         <div class="six wide right floated column">
-          <img src="http://lorempixel.com/400/200/" class="ui large bordered rounded image">
+          <img src="http://lorempixel.com/g/400/200/" class="ui large bordered rounded image">
         </div>
       </div>
       <div class="row">
@@ -102,13 +104,13 @@
     <div class="ui equal width stackable internally celled grid">
       <div class="center aligned row">
         <div class="column">
-          <h3>"What a Company"</h3>
+          <h3>Manticore CMS</h3>
           <p>That is what they all say about us</p>
         </div>
         <div class="column">
-          <h3>"I shouldn't have gone with their competitor."</h3>
+          <h3>"Finally a CMS to deliver content for modern Applications" - Anonymous</h3>
           <p>
-            <img src="http://lorempixel.com/400/200/" class="ui avatar image"> <b>Nan</b> Chief Fun Officer Acme Toys
+            <img src="http://lorempixel.com/400/200/people/" class="ui avatar image"> <b>Lani</b> CTO of Cool Content Group
           </p>
         </div>
       </div>
@@ -117,15 +119,15 @@
 
   <div class="ui vertical stripe segment">
     <div class="ui text container">
-      <h3 class="ui header">Breaking The Grid, Grabs Your Attention</h3>
+      <h3 class="ui header">Why Manticore?</h3>
       <p>Instead of focusing on content creation and hard work, we have learned how to master the art of doing nothing by providing massive amounts of whitespace and generic content that can seem massive, monolithic and worth your attention.</p>
       <a class="ui large button">Read More</a>
       <h4 class="ui horizontal header divider">
         <a href="#">Case Studies</a>
       </h4>
-      <h3 class="ui header">Did We Tell You About Our Bananas?</h3>
-      <p>Yes I know you probably disregarded the earlier boasts as non-sequitor filler content, but its really true. It took years of gene splicing and combinatory DNA research, but our bananas can really dance.</p>
-      <a class="ui large button">I'm Still Quite Interested</a>
+      <h3 class="ui header">Did We Tell You About Our SAAS products?</h3>
+      <p>Our SAAS products are world class. Well, at least we believe they will be one day... if only we can fool you into buying!!!</p>
+      <a class="ui large button">I wanna BUY!!!</a>
     </div>
   </div>
 
@@ -138,17 +140,17 @@
           <div class="ui inverted link list">
             <a href="#" class="item">Sitemap</a>
             <a href="#" class="item">Contact Us</a>
-            <a href="#" class="item">Religious Ceremonies</a>
-            <a href="#" class="item">Gazebo Plans</a>
+            <a href="#" class="item">Blip</a>
+            <a href="#" class="item">Blap</a>
           </div>
         </div>
         <div class="three wide column">
           <h4 class="ui inverted header">Services</h4>
           <div class="ui inverted link list">
-            <a href="#" class="item">Banana Pre-Order</a>
-            <a href="#" class="item">DNA FAQ</a>
-            <a href="#" class="item">How To Access</a>
-            <a href="#" class="item">Favorite X-Men</a>
+            <a href="#" class="item">Pre-Order</a>
+            <a href="#" class="item">FAQ</a>
+            <a href="#" class="item">Blog</a>
+            <a href="#" class="item">Favorites</a>
           </div>
         </div>
         <div class="seven wide column">
