CMS pages and forms

--- a/semantic/pages/cms.html
+++ b/semantic/pages/cms.html
@@ -22,9 +22,10 @@
   <div class="ui container">
     <a class="active item">Home</a>
     <a class="item" href="/pages">Pages</a>
-    <a class="item" href="/blocks">Blocks</a>
-    <a class="item" href="/images">Images</a>
-    <a class="item" href="/layouts">Layouts</a>
+    <a class="item" href="./cms-pages.html">Pages</a>
+    <a class="item" href="./cms-blocks.html">Blocks</a>
+    <a class="item" href="./cms-images.html">Images</a>
+    <a class="item" href="./cms-layouts.html">Layouts</a>
     <div class="right menu">
       <div class="item">
         <a class="ui button">Log in</a>
@@ -39,10 +40,10 @@
 <!-- Sidebar Menu -->
 <div class="ui vertical inverted sidebar menu">
   <a class="active item">Home</a>
-  <a class="item" href="/pages">Pages</a>
-  <a class="item" href="/blocks">Blocks</a>
-  <a class="item" href="/images">Images</a>
-  <a class="item" href="/layouts">Layouts</a>
+  <a class="item" href="./cms-pages.html">Pages</a>
+  <a class="item" href="./cms-blocks.html">Blocks</a>
+  <a class="item" href="./cms-images.html">Images</a>
+  <a class="item" href="./cms-layouts.html">Layouts</a>
   <a class="item">Login</a>
   <a class="item">Signup</a>
 </div>
@@ -57,10 +58,10 @@
           <i class="sidebar icon"></i>
         </a>
         <a class="active item">Home</a>
-        <a class="item" href="/pages">Pages</a>
-        <a class="item" href="/blocks">Blocks</a>
-        <a class="item" href="/images">Images</a>
-        <a class="item" href="/layouts">Layouts</a>
+        <a class="item" href="./cms-pages.html">Pages</a>
+        <a class="item" href="./cms-blocks.html">Blocks</a>
+        <a class="item" href="./cms-images.html">Images</a>
+        <a class="item" href="./cms-layouts.html">Layouts</a>
         <div class="right item">
           <a class="ui inverted button">Log in</a>
           <a class="ui inverted button">Sign Up</a>
