--- a/semantic/pages/fixed.html
+++ b/semantic/pages/fixed.html
@@ -10,24 +10,11 @@
   <!-- Site Properities -->
   <title>Fixed Menu Example - Semantic</title>
 
-  <link rel="stylesheet" type="text/css" href="../dist/components/reset.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/site.css">
-
-  <link rel="stylesheet" type="text/css" href="../dist/components/container.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/grid.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/header.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/image.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/menu.css">
-
-  <link rel="stylesheet" type="text/css" href="../dist/components/divider.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/list.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/segment.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/dropdown.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/icon.css">
   <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
-  <script src="../dist/components/visibility.js"></script>
-  <script src="../dist/components/sidebar.js"></script>
-  <script src="../dist/components/transition.js"></script>
+  <script src="../dist/semantic.min.js"></script>
+  <script src="home/page.js"></script>
+  <link rel="stylesheet" type="text/css" class="ui" href="../dist/semantic.min.css">
+  <link rel="stylesheet" type="text/css" href="home/page.css"/>
 
   <script type="text/javascript">
   $(function() {
